[gd_scene load_steps=5 format=3 uid="uid://sdou70sqa7v6"]

[ext_resource type="Script" path="res://UIObjects/AvalonMenu/WarriorMenus/WarriorAbilityMenu/WarriorAbilityDescriptionMenu/WarriorAbilityDescriptionMenu.gd" id="1_aplg0"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_x623b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpxgi"]
bg_color = Color(0.0768361, 0.0768358, 0.0768356, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mvhur"]
bg_color = Color(1, 1, 1, 1)

[node name="WarriorAbilityDescriptionMenu" type="Control"]
custom_minimum_size = Vector2(400, 800)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_aplg0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cpxgi")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 36
text = "Ability Name"

[node name="Separator" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mvhur")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PointCostTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 24
text = "Point Cost: "

[node name="PointCostLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 24
text = "5"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ManaCostTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 24
text = "Mana Cost: "

[node name="ManaCostLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 24
text = "20"

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CooldownTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 24
text = "Cooldown: "

[node name="CooldownLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 24
text = "5"

[node name="Separator2" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mvhur")

[node name="VboxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Description" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VboxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_x623b")
theme_override_font_sizes/font_size = 28
text = "Description:"

[node name="DescriptionLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/VboxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_x623b")
theme_override_font_sizes/normal_font_size = 20
text = "Hello This is my cool content it's very cool I like it a lot its awesome"
fit_content = true
